Add clickable links to detail views

--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -4,11 +4,11 @@
 <table>
   <tr>
     <th>Film format</th>
-    <td>{{ object.format }}</td>
+    <td>{% if object.format %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Filmstock</th>
-    <td>{{ object.filmstock }}</td>
+    <td>{% if object.filmstock %}<a href="{% url 'filmstock-detail' object.filmstock.id %}">{{ object.filmstock }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Purchase date</th>
