--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -4,11 +4,11 @@
 <table>
   <tr>
     <th>Mount</th>
-    <td>{{ object.mount }}</td>
+    <td>{% if object.mount %}<a href="{% url 'mount-detail' object.mount.id %}">{{ object.mount }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Format</th>
-    <td>{{ object.format }}</td>
+    <td>{% if object.format %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Focus type</th>
@@ -43,16 +43,8 @@
     <td>{{ object.weight }}</td>
   </tr>
   <tr>
-    <th>Introduced</th>
-    <td>{{ object.introduced }}</td>
-  </tr>
-  <tr>
-    <th>Discontinued</th>
-    <td>{{ object.discontinued }}</td>
-  </tr>
-  <tr>
     <th>Negative size</th>
-    <td>{{ object.negative_size }}</td>
+    <td>{% if object.negative_size %}<a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Shutter type</th>
@@ -84,7 +76,7 @@
   </tr>
   <tr>
     <th>Lens model</th>
-    <td>{{ object.lensmodel }}</td>
+    <td>{% if object.lensmodel %}<a href="{% url 'lensmodel-detail' object.lensmodel.id %}">{{ object.lensmodel }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Battery quantity</th>
