--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -5,6 +5,7 @@
   <tr>
     <th>Film</th>
     <td>{{ object.film }}</td>
+    <td>{% if object.film %}<a href="{% url 'film-detail' object.film.id %}">{{ object.film }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Frame</th>
