--- a/schema/templates/schema/teleconverter_detail.html
+++ b/schema/templates/schema/teleconverter_detail.html
@@ -8,11 +8,11 @@
   </tr>
   <tr>
     <th>Manufacturer</th>
-    <td>{{ object.manufacturer }}</td>
+    <td>{% if object.manufacturer %}<a href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Mount</th>
-    <td>{{ object.mount }}</td>
+    <td>{% if object.mount %}<a href="{% url 'mount-detail' object.mount.id %}">{{ object.mount }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Factor</th>
