--- a/schema/templates/schema/index.html
+++ b/schema/templates/schema/index.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block heading %}<h1>PhotoDB</h1>{%endblock%}
+{% block heading %}<h1>Welcome</h1>{%endblock%}
 
 {% block content %}
 <p>Welcome to PhotoDB - an app for cataloguing vintage cameras, lenses, films, negatives & prints</p>
