--- a/schema/templates/heading.html
+++ b/schema/templates/heading.html
@@ -1,6 +1,6 @@
 {% load model_name %}
 {% load static %}
 
-<img src="{% get_static_prefix %}icons/{{ view.model | verbose_name | cut:" " }}.png" alt="{{ view.model | verbose_name | title}}">
+<img src="{% get_static_prefix %}icons/50/{{ view.model | verbose_name | cut:" " }}50.png" alt="{{ view.model | verbose_name | title}}">
 <h1>{{ view.model | verbose_name_plural | title }}</h1>
 {% if view.model.description %}<p>{{ view.model.description }}</p>{% endif %}
