--- a/schema/templates/schema/detail.html
+++ b/schema/templates/schema/detail.html
@@ -9,6 +9,7 @@
 {% block actions %}
   <h3>Actions</h3>
   <ul>
+    <li>See all</li>
     <li><a href="{{ object.get_absolute_url }}/update">Edit</a></li>
     {% block moreactions %}{%endblock%}
   </ul>
