Display correct repair description

--- a/schema/templates/schema/repair_detail.html
+++ b/schema/templates/schema/repair_detail.html
@@ -20,7 +20,7 @@
   </tr>
   <tr>
     <th>Description</th>
-    <td>{{ object.description }}</td>
+    <td>{{ object.detail }}</td>
   </tr>
 </table>
 {% endblock %}
