Add link to icons8

--- a/schema/templates/footer.html
+++ b/schema/templates/footer.html
@@ -1,8 +1,10 @@
 {% load static %}
 
 <p align="center">
-    <a href="https://www.facebook.com/camerahubapp" target="_blank"><img src="{% static "icons/50/facebook50.png" %}"
-            alt="Facebook"></a>
-    <a href="https://github.com/djjudas21/photodb" target="_blank"><img src="{% static "icons/50/github50.png" %}"
-            alt="Github"></a>
+        <a href="https://www.facebook.com/camerahubapp" target="_blank"><img
+                        src="{% static "icons/50/facebook50.png" %}" alt="Facebook"></a>
+        <a href="https://github.com/djjudas21/photodb" target="_blank"><img src="{% static "icons/50/github50.png" %}"
+                        alt="Github"></a>
+        <a href="https://icons8.com/icons" target="_blank"><img src="{% static "icons/50/icons850.png" %}"
+                        alt="Icons8"></a>
 </p>
