--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,11 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <h2>Login</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   <button type="submit">Login</button>
 </form>
 <p>No account? <a href="{% url 'signup' %}">Sign up</a></Sign> now</p>
