--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,11 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit">Sign up</button>
   </form>
 {% endblock %}
