--- a/schema/templates/base_generic.html
+++ b/schema/templates/base_generic.html
@@ -18,6 +18,7 @@
             <div class="col-sm-2">
                 {% block sidebar %}
                 <h1>PhotoDB</h1>
+                <img src="{% static "logos/combinedlogo188.png" %}" alt="PhotoDB logo">
                 {% if user.is_authenticated %}
                 <p><a href="{% url 'logout' %}">Logout</a> {{ user.username }}</p>
                 {% else %}
