Change human-readable references

--- a/schema/templates/base_generic.html
+++ b/schema/templates/base_generic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    {% block title %}<title>PhotoDB</title>{% endblock %}
+    {% block title %}<title>CameraHub</title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-sm-2">
                 {% block sidebar %}
-                <h1>PhotoDB</h1>
+                <h1>CameraHub</h1>
                 {% if user.is_authenticated %}
                 <p><a href="{% url 'logout' %}">Logout</a> {{ user.username }}</p>
                 {% else %}
