Print code version in footer for #170

--- a/schema/templates/footer.html
+++ b/schema/templates/footer.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load version %}
 
 <p align="center">
         <a href="https://www.facebook.com/camerahubapp" target="_blank"><img
@@ -7,4 +8,6 @@
                         alt="Github"></a>
         <a href="https://icons8.com/icons" target="_blank"><img src="{% static "icons/50/icons850.png" %}"
                         alt="Icons8"></a>
+        <br>
+        <small>CameraHub v{% camerahub_version %}</small>
 </p>
