--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,4 +9,5 @@
   <button type="submit">Login</button>
 </form>
 <p>No account? <a href="{% url 'signup' %}">Sign up</a></Sign> now</p>
+<p>Forgot your password? <a href="{% url 'password_reset' %}">Reset it</a></p>
 {% endblock %}
