--- a/schema/templates/schema/create.html
+++ b/schema/templates/schema/create.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
 {% block heading %}{% include "heading.html" %}{%endblock%}
