--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "base.html" %}
 {% load render_table from django_tables2 %}
 
 {% block heading %}{% include "heading.html" %}{%endblock%}
