--- a/templates/django_registration/activation_complete.html
+++ b/templates/django_registration/activation_complete.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% load i18n %}
 
 {% block content %}
-<p>{% trans "Your account is now activated." %}</p>
+<p>Your account is now activated. <a href="{% url 'login' %}">Log in</a> now.</p>
 {% endblock %}
