--- a/templates/django_registration/registration_closed.html
+++ b/templates/django_registration/registration_closed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% load i18n %}
 
 {% block content %}
-	<p>{% trans "Registration is currently closed." %}</p>
+<h2>Register</h2>
+<p>User registration is currently closed</p>
 {% endblock %}
