--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>Password changed</p>
+<h2>Change password</h2>
+<p>Your password has been changed</p>
 {% endblock %}
