--- a/templates/django_registration/registration_complete.html
+++ b/templates/django_registration/registration_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% load i18n %}
 
 {% block content %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
+<h2>Register</h2>
+<p>Thank you for registering on CameraHub. Please check your inbox for an email to activate your account.</p>
 {% endblock %}
