--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
-{% load i18n %}
-
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Register</h2>
+  <p>Enter your details to create a free account for CameraHub</p>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Sign up</button>
+    <button type="submit">Register</button>
   </form>
 {% endblock %}
