Revert "Move head tags outside the template for central control"
This reverts commit 4f5a448d0e524f88cfb9329e6b2831e7c760140d.

--- a/schema/templates/schema/about.html
+++ b/schema/templates/schema/about.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block heading %}
-<img src="{% static "icons/50/about50.png" %}" alt="About">
-About{%endblock%}
+{% block heading %}<h1>
+    <img src="{% static "icons/50/about50.png" %}" alt="Home">
+    About</h1>{%endblock%}
 
 {% block content %}
 
