--- a/schema/templates/schema/index.html
+++ b/schema/templates/schema/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block heading %}
-<img src="{% static "icons/50/home50.png" %}" alt="Home">
-Welcome{%endblock%}
+{% block heading %}<h1>
+    <img src="{% static "icons/50/home50.png" %}" alt="Home">
+    Welcome</h1>{%endblock%}
 
 {% block content %}
 <p>Welcome to CameraHub: an app for cataloguing vintage cameras, lenses, films, negatives & prints</p>
