Apply bootstrap table class

--- a/schema/templates/schema/archive_detail.html
+++ b/schema/templates/schema/archive_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Archive type</th>
     <td>{{ object.type }}</td>
