--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Name</th>
     <td>{{ object.name }}</td>
@@ -30,7 +30,7 @@
 
 <div style="margin-left:20px;margin-top:20px">
     <h4>Films</h4>
-    <table>
+    <table class="table">
       <tr>
         <th>Film</th>
         <th>Caption</th>
