--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Mount</th>
     <td>{{ object.mount }}</td>
@@ -30,7 +30,7 @@
 
 <div style="margin-left:20px;margin-top:20px">
   <h4>Cameras</h4>
-  <table>
+  <table class="table">
     <tr>
       <th>Model</th>
       <th>Serial</th>
@@ -46,7 +46,7 @@
   </table>
 
   <h4>Lenses</h4>
-  <table>
+  <table class="table">
     <tr>
       <th>Model</th>
       <th>Serial</th>
