--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Film</th>
     <td>{{ object.film }}</td>
@@ -83,7 +83,7 @@
 
 <div style="margin-left:20px;margin-top:20px">
     <h4>Prints</h4>
-    <table>
+    <table class="table">
       <tr>
         <th>ID</th>
       </tr>
