--- a/schema/templates/schema/series_detail.html
+++ b/schema/templates/schema/series_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Name</th>
     <td>{{ object.name }}</td>
@@ -10,7 +10,7 @@
 
 <div style="margin-left:20px;margin-top:20px">
   <h4>Cameras</h4>
-  <table>
+  <table class="table">
     <tr>
       <th>Model</th>
     </tr>
@@ -24,7 +24,7 @@
   </table>
 
   <h4>Lenses</h4>
-  <table>
+  <table class="table">
     <tr>
       <th>Model</th>
     </tr>
