--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Film format</th>
     <td>{% if object.format %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}</td>
@@ -34,7 +34,7 @@
 
 <div style="margin-left:20px;margin-top:20px">
   <h4>Films cut from this bulk film</h4>
-  <table>
+  <table class="table">
     <tr>
       <th>Film ID</th>
       <th>Title</th>
