--- a/schema/templates/schema/filter_detail.html
+++ b/schema/templates/schema/filter_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Type</th>
     <td>{{ object.type }}</td>
