--- a/schema/templates/schema/format_detail.html
+++ b/schema/templates/schema/format_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Film format</th>
     <td>{{ object.format }}</td>
