--- a/schema/templates/schema/process_detail.html
+++ b/schema/templates/schema/process_detail.html
@@ -1,7 +1,7 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
-<table>
+<table class="table">
   <tr>
     <th>Process name</th>
     <td>{{ object.name }}</td>
